--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -3,6 +3,7 @@
 .home-page {
   height: 60%;
   //   background-color: #fafafe;
+  background-repeat: no-repeat, repeat;
   height: "300px";
   padding-bottom: 25px;
   background-size: "cover";
