--- a/src/components/cases/cases.scss
+++ b/src/components/cases/cases.scss
@@ -2,6 +2,26 @@
   p {
     text-align: start;
   }
+
+  h3 {
+    text-align: start;
+    padding: auto;
+    padding: 2px 17px;
+    margin: 4px 93px;
+    font-size: 17px;
+    position: relative;
+    font-weight: 400;
+  }
+  h3::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    // left: 110%;
+    height: 6px;
+    width: 20px;
+    background-color: var(--active);
+    left: -29px;
+  }
 }
 .grid-container {
   display: grid;
