--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -19,9 +19,9 @@
     }
 
     .content-left {
-      display: flex;
+      display: block;
       flex-flow: row wrap;
-      justify-content: center;
+      justify-content: start;
 
       @include sm-screen {
         flex-wrap: wrap;
@@ -34,6 +34,7 @@
           font-size: 14px;
           color: var(--white);
           font-weight: 500;
+          text-decoration: none;
         }
 
         .link:hover {
