--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -18,11 +18,15 @@
       width: 100%;
       object-fit: contain;
     }
+
+    .nav-item {
+      margin-left: 24px;
+    }
   }
 
   .brand-center {
-    position: absolute;
-    width: 100%;
+    // position: absolute;
+    width: 69%;
     left: 0;
     text-align: center;
 
@@ -36,6 +40,22 @@
       background-color: #dbdbdb;
       border-radius: 50px;
       opacity: 1;
+    }
+  }
+
+  .brand-right {
+    display: flex;
+    align-items: flex-end;
+
+    a {
+      padding: 4px 18px;
+      border: none;
+      border-radius: 5px;
+      color: var(--active);
+      font-size: 16px;
+      cursor: pointer;
+      background-color: var(--white);
+      border-radius: 50px;
     }
   }
 
