remove un-used code and clean

--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -10,6 +10,9 @@
   background-position: center;
   position: relative;
   display: "flex";
+  img {
+    width: -webkit-fill-available;
+  }
 
   .image-text {
     position: absolute;
