remove un-used code and clean

--- a/src/components/whatwedo/wedo.scss
+++ b/src/components/whatwedo/wedo.scss
@@ -52,6 +52,7 @@
       padding-bottom: 1em;
       font-weight: bold;
       font-size: 22px;
+      text-align: start;
     }
 
     .card-icon {
@@ -60,6 +61,10 @@
       margin-top: 1em;
       width: 100%;
       //   height: 100%;
+
+      img {
+        width: 47px;
+      }
     }
   }
 }
