--- a/src/components/whatwedo/wedo.scss
+++ b/src/components/whatwedo/wedo.scss
@@ -3,6 +3,12 @@
   height: "300px";
   padding-bottom: 25px;
 
+  h2 {
+    text-align: justify;
+    padding: 2px 17px;
+    margin: 4px 93px;
+  }
+
   h3 {
     text-align: start;
     padding: auto;
