--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -37,7 +37,7 @@
       color: white;
       font-size: 16px;
       cursor: pointer;
-      background-color: #dbdbdb;
+      background-color: var(--active);
       border-radius: 50px;
       opacity: 1;
     }
